# zoomcamp24

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.tf  pipeline.py  pyproject.toml  variables.tf
docs/: README.md
magic-zoomcamp/: io_config.yaml  metadata.yaml
magic-zoomcamp/data_exporters/: taxi_to_bigquery.sql  taxi_to_gcs.py  taxi_to_gcs_partitioned_parquet.py
magic-zoomcamp/data_loaders/: check_insert.sql  green_taxi_from_url.py  homework_checks.py  load_taxi_gcs.py  load_titanic_csv.py  taxi_from_url.py
magic-zoomcamp/pipelines/api_to_gcs/: metadata.yaml
magic-zoomcamp/pipelines/api_to_postgres/: metadata.yaml
magic-zoomcamp/pipelines/example_pipeline/: metadata.yaml
magic-zoomcamp/pipelines/gcs_to_bigquery/: metadata.yaml
magic-zoomcamp/pipelines/green_taxi_etl/: metadata.yaml
magic-zoomcamp/pipelines/test_bigquery_connection/: metadata.yaml
magic-zoomcamp/pipelines/test_gcs/: metadata.yaml
magic-zoomcamp/pipelines/test_postgres_connection/: metadata.yaml
magic-zoomcamp/transformers/: transform_green_taxi.py  transform_staged_data.py  transform_taxi_dataset.py
notebooks/: README.md
notebooks/etl/: download_url.ipynb  homewoork_w1.ipynb  read_parquet.ipynb
src/: README.md
src/app/: README.md  settings.py
src/app/data/: README.md
src/app/data/etl/: main.py
src/core/: README.md
src/core/utils/: data_download.py
tests/: README.md
