[tool.poetry]
name = "zoomcamp24"
version = "0.1.0"
description = ""
authors = ["Ezequiel Lopez <ezequiel20139@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.4"
pgcli = "^4.0.1"
sqlalchemy = "^2.0.25"
wget = "^3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
